--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -121,6 +121,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="files_and_folders">Fișiere și dosare</string>
     <string name="document_browser">Browser de documente</string>
     <string name="file_browser">Browser de fișiere</string>
+    <string name="set_due_date">Setați data scadentă</string>
+    <string name="insert_replace_date">Insert date</string>
     <string name="create_note" needed="false">Creează o notă</string>
     <string name="special_documents" needed="false">Documente speciale</string>
     <string name="keep_screen_on" needed="false">Păstraţi ecranul pornit</string>
