--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -121,6 +121,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="files_and_folders">الملفات والمجلدات</string>
     <string name="document_browser">متصفح المستندات</string>
     <string name="file_browser">متصفح الملفات</string>
+    <string name="set_due_date">تعيين تاريخ الاستحقاق</string>
+    <string name="insert_replace_date">Insert date</string>
     <string name="create_note" needed="false">إنشاء ملاحظة</string>
     <string name="special_documents" needed="false">مستندات خاصة</string>
     <string name="keep_screen_on" needed="false">إبقاء الشاشة مضيئة</string>
