--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -121,6 +121,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="files_and_folders">Soubory a složky</string>
     <string name="document_browser">prohlížeč dokumentů</string>
     <string name="file_browser">Správce souborů</string>
+    <string name="set_due_date">Nastavit termín dokončení</string>
+    <string name="insert_replace_date">Insert date</string>
     <string name="create_note" needed="false">Vytvořit poznámku</string>
     <string name="special_documents" needed="false">Speciální dokumenty</string>
     <string name="keep_screen_on" needed="false">Udržovat obrazovku zapnutou</string>
@@ -233,7 +235,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="details">Podrobnosti</string>
     <string name="calendar">Kalendář</string>
     <string name="warning_disallowed_sd_access">Varování! Aplikace nemá oprávnění k uložení tohoto souboru, všechny změny budou ztraceny. Neexistuje řešení a není možnost žádného oznámení. Android zde odpírá jakýkoliv přístup.</string>
-    <string name="error_picture_selection">Nebyl vybrán, pořízen nebo uložen žádný obrázek.</string>
+    <string name="error_picture_selection">Nebyl zvolen Âžádný obrázek.</string>
     <string name="gallery_picture">Obrázek z galerie</string>
     <string name="camera_picture">Obrázek z fotoaparátu</string>
     <string name="enable_undo_and_redo_be_patient">Povolit akce Zpět a Znovu. Vhodné pouze pro pokročilé použití, opatrně, abyste neodstranili nic důležitého. Zavřete a otevřete editor pro vymazání historie.</string>
