--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -121,6 +121,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="files_and_folders">Pliki i foldery</string>
     <string name="document_browser">Przeglądarka dokumentów</string>
     <string name="file_browser">Menedżer plików</string>
+    <string name="set_due_date">Ustaw termin</string>
+    <string name="insert_replace_date">Insert date</string>
     <string name="create_note" needed="false">Utwórz notatkę</string>
     <string name="special_documents" needed="false">Specjalne dokumenty</string>
     <string name="keep_screen_on" needed="false">Pozostaw ekran włączony</string>
