--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -122,7 +122,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="document_browser">Перегляд документів</string>
     <string name="file_browser">Перегляд файлів</string>
     <string name="set_due_date">Встановити дату завершення</string>
-    <string name="insert_replace_date">Insert date</string>
+    <string name="insert_replace_date">Вставити дату</string>
     <string name="create_note" needed="false">Створити нотатку</string>
     <string name="special_documents" needed="false">Особливі документи</string>
     <string name="keep_screen_on" needed="false">Не вимикати екран</string>
