--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -122,7 +122,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="document_browser">Explorador de ficheiros</string>
     <string name="file_browser">Explorador de ficheirosicheiros</string>
     <string name="set_due_date">Definir data limite</string>
-    <string name="insert_replace_date">Insert date</string>
+    <string name="insert_replace_date">Inserir data</string>
     <string name="create_note" needed="false">Criar nota</string>
     <string name="special_documents" needed="false">Documentos especiais</string>
     <string name="keep_screen_on" needed="false">Manter ecrã ligado</string>
