[ci skip] Crowdin translation bot: New translations for Bengali

--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -53,4 +53,15 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="file">ফাইল</string>
     <string name="image">ছবি</string>
     <string name="font_size">ফন্টের আকার</string>
+    <string name="render_rtl_language">ডান থেকে বামের ভাষার জন্য প্রক্রিয়া করো</string>
+    <string name="error_cannot_create_notebook_dir__appspecific">ত্রুটি: নোটবই এর ডাইরেক্টরি তৈরি করা যায়নি</string>
+    <string name="last_modified_witharg">শেষ পরিবর্তিত: %s</string>
+    <string name="select_this_folder">ফোল্ডার নির্বাচন করো</string>
+    <string name="select">নির্বাচন</string>
+    <string name="create">তৈরি</string>
+    <string name="select_entries">প্রদত্ত তথ্য নির্বাচন করো</string>
+    <string name="one_item_selected">একটা বস্তু নির্বাচিত</string>
+    <string name="items_selected_witharg" tools:ignore="PluralsCandidate">%dটি বস্তু নির্বাচিত</string>
+    <string name="hide_statusbar_at_this_view">এই জায়গায় স্ট্যাটাস বার (অবস্থা নির্দেশক অংশ) লোকাও</string>
+    <string name="hide_statusbar">স্ট্যাটাস বার লোকাও</string>
 </resources>
