--- a/app/src/main/res/values-bs/strings.xml
+++ b/app/src/main/res/values-bs/strings.xml
@@ -121,6 +121,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="files_and_folders">Datoteke i direktoriji</string>
     <string name="document_browser">Preglednik dokumenata</string>
     <string name="file_browser">Preglednik datoteka</string>
+    <string name="set_due_date">Odredi dan dospjeća</string>
+    <string name="insert_replace_date">Unesi datum</string>
     <string name="create_note" needed="false">Kreiraj bilješku</string>
     <string name="special_documents" needed="false">Posebni dokumenti</string>
     <string name="keep_screen_on" needed="false">Održavaj upaljen ekran</string>
